Fix some sonarqube analysis feedbacks